--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
+.news-aggregator {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.news-aggregator .heading {
+  color: #ff6f6f;
+}
+
+.no-articles-message {
+  margin: 20px 0;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  border-radius: 8px;
   text-align: center;
+  font-size: 1.2em;
+  color: #555;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.no-articles-message p {
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.loading-section {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 50vh;
 }
 
-.App-link {
-  color: #61dafb;
+.loading-section .clip-loader {
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.load-more{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.load-more-button {
+  border: 1px solid #ff6f6f;
+  background-color: white;;
+  color: #ff6f6f;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.9em;
+}
+.load-more-button:hover {
+  background-color: #f8e8e8;
 }
